# ShipBattle

./: MANIFEST.in  README.md  requirments.txt  setup.cfg
ship_game/: manage.py
ship_game/game_app/: admin.py  models.py  tests.py  urls.py
ship_game/game_app/api/: serializers.py  urls.py  views.py
ship_game/game_app/core/: views.py
ship_game/game_app/migrations/: 0001_initial.py  0002_battle_ship_death_soldiers_ship_destroyed_and_more.py  0003_alter_ship_eligible_soldiers.py
ship_game/ship_game/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
