[metadata]
name = ship_game
version = 0.1.0
author = Sanin Nurak
author_email = saninnurak@hotmail.com
description = The battle between N ships in the middle of the ocean.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.10
include_package_data = true
zip_safe = true
packages =
package_dir =
    =ship_game
install_requires =
    Django==4.1
    djangorestframework==3.12.0
    pytz==2022.7.1
    drf-yasg==1.21.5


[options.extras_require]
tests =
    pytest==7.2.0
    pytest-cov==4.0.0
